# webhook-git-updater

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: auth.rs  config.rs  db.rs  dev.rs  exception.rs  gitop.rs  main.rs
src/controller/: git.rs  mod.rs
